kubernetes/cluster/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rebas-pantry-api
  labels:
    app: rebas-pantry-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rebas-pantry-api
  template:
    metadata:
      name: rebas-pantry-api
      labels:
        app: rebas-pantry-api
    spec:
      containers:
        - name: rebas-pantry-api
          image: ghcr.io/zgamelogic/rebas-pantry-api:master
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 5
      restartPolicy: Always
      imagePullSecrets:
        - name: ghcr-secret
